Modificacion de estructura de componentes

--- a/src/layouts/PanelDeUsuario.astro
+++ b/src/layouts/PanelDeUsuario.astro
@@ -1,6 +1,6 @@
 ---
 import { PrimeReactProvider } from 'primereact/api'
-import UserPanel from '@components/UserPanel'
+import UserPanel from '@components/UserPanel/UserPanel'
 interface Props {
   title: string
 }
