--- a/src/pages/administrarcontenido.astro
+++ b/src/pages/administrarcontenido.astro
@@ -1,7 +1,7 @@
 ---
 import PanelDeUsuario from '../layouts/PanelDeUsuario.astro'
-import AdminContent from '../Views/components/AdminContent'
-import ProtectedRoute from '../Views/components/ProtectedRoute'
+import AdminContent from '../Views/components/UserPanel/AdminContent'
+import ProtectedRoute from '@components/core/ProtectedRoute'
 ---
 
 <ProtectedRoute client:only>
