--- a/src/pages/administrarcontenido/crear.astro
+++ b/src/pages/administrarcontenido/crear.astro
@@ -1,5 +1,5 @@
 ---
-import ProtectedRoute from '../../Views/components/ProtectedRoute'
+import ProtectedRoute from '@components/core/ProtectedRoute'
 import CrearTarjeta from '../../Views/components/CrearTarjeta'
 import PanelDeUsuario from '../../layouts/PanelDeUsuario.astro'
 ---
