--- a/src/pages/administrarcontenido/modificartarjeta/[id].astro
+++ b/src/pages/administrarcontenido/modificartarjeta/[id].astro
@@ -1,6 +1,6 @@
 ---
-import ProtectedRoute from '../../../Views/components/ProtectedRoute'
-import ModificarTarjeta from '../../../Views/components/ModificarTarjeta'
+import ProtectedRoute from '@components/core/ProtectedRoute'
+import ModificarTarjeta from '@components/UserPanel/ModificarTarjeta'
 import PanelDeUsuario from '../../../layouts/PanelDeUsuario.astro'
 import { getAllTarjetasUids } from '../../../Model/Tarjetas'
 export async function getStaticPaths() {
