--- a/src/pages/administrarcontenido/visualizar.astro
+++ b/src/pages/administrarcontenido/visualizar.astro
@@ -8,3 +8,4 @@ import PanelDeUsuario from '../../layouts/PanelDeUsuario.astro'
     <div class="p-4 sm:ml-64 w-auto h-full">Visualizar tarjeta</div>
   </PanelDeUsuario>
 </ProtectedRoute>
+../../Views/components/core/ProtectedRoute
