--- a/src/pages/misdatos.astro
+++ b/src/pages/misdatos.astro
@@ -1,11 +1,11 @@
 ---
-import ProtectedRoute from '@components/ProtectedRoute'
+import ProtectedRoute from '@components/core/ProtectedRoute'
 import PanelDeUsuario from '../layouts/PanelDeUsuario.astro'
-import Misdatos from '../Views/components/MisDatos'
+import MisDatos from '@components/UserPanel/MisDatos'
 ---
 
 <ProtectedRoute client:only>
   <PanelDeUsuario title="Panel de usuario">
-    <Misdatos client:only />
+    <MisDatos client:only />
   </PanelDeUsuario>
 </ProtectedRoute>
