--- a/src/layouts/PanelDeUsuario.astro
+++ b/src/layouts/PanelDeUsuario.astro
@@ -28,6 +28,11 @@ const { title } = Astro.props
         --highlight-text-color: #03989e;
         /* background-color: rgb(248 250 252); */
       }
+      .asiseg_input {
+        box-shadow: 0 0 0 1px #a6a6a6;
+        opacity: 50;
+        outline: none;
+      }
       .asiseg_input:focus-visible {
         box-shadow: 0 0 0 1px #03989e;
         outline: none;
