Funcionalidad para crear, rescatar y visualizar citas de pacientes

--- a/src/Views/components/UserPanel/MisCitas/miscitas.css
+++ b/src/Views/components/UserPanel/MisCitas/miscitas.css
@@ -4,3 +4,7 @@
 .rbc-event.rbc-selected{
     background-color: #03989E
 }
+
+input[type="time"]::-webkit-calendar-picker-indicator {
+    display: none;
+}
