--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -28,6 +28,16 @@ const { title } = Astro.props
         --highlight-text-color: #03989e;
         /* background-color: rgb(248 250 252); */
       }
+      .p-inputtext {
+        box-shadow: 0 0 0 1px #a6a6a6;
+        opacity: 50;
+        outline: none;
+        padding-inline-start: 0.5rem;
+      }
+      .p-inputtext:focus-visible {
+        box-shadow: 0 0 0 1px #03989e;
+        outline: none;
+      }
       .asiseg_input {
         box-shadow: 0 0 0 1px #a6a6a6;
         opacity: 50;
