Funcionalidad de busqueda de tarjetas en pagina principal y pacientes en chat

--- a/src/pages/chat.astro
+++ b/src/pages/chat.astro
@@ -1,6 +1,6 @@
 ---
 import PanelDeUsuario from '../layouts/PanelDeUsuario.astro'
-import App from '../Views/components/App'
+import App from './index.astro'
 ---
 
 <PanelDeUsuario title="Panel de usuario">
